src/objects/JBCXM__GSRelationshipSection__c.object
<CustomObject>
    <fields>
        <fullName>JBCXM__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__Config__c</fullName>
        <label>Config</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__DefaultFilter__c</fullName>
        <label>Default Filter</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__DisplayOrder__c</fullName>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__GSLayout__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GS Layout</label>
        <referenceTo>JBCXM__GSLayout__c</referenceTo>
        <relationshipLabel>Relationship Sections</relationshipLabel>
        <relationshipName>Relationship_Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__InAccountWidget__c</fullName>
        <defaultValue>false</defaultValue>
        <label>InAccountWidget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__InOpportunityWidget__c</fullName>
        <defaultValue>false</defaultValue>
        <label>InOpportunityWidget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__InRelationship360__c</fullName>
        <defaultValue>true</defaultValue>
        <label>InRelationship360</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__Label__c</fullName>
        <label>Label</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__RelationshipType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship Type</label>
        <referenceTo>JBCXM__GSRelationshipType__c</referenceTo>
        <relationshipLabel>Relationship Section</relationshipLabel>
        <relationshipName>GSRelationshipTypeSection</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Type__c</fullName>
        <label>Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Relationship Section</label>
    <nameField>
        <label>GSRelationshipSection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relationship Sections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>